--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,13 @@ body {
     background-position: center;
     height: 100vh;
     color: #ddddef;
-    font-size: 36px;
-    line-height: 1.7;
+    font-size: 28px;
+    line-height: 1.3;
     font-size: bold;
+}
+h1, h2 {
+    margin: 20px 0;
+    font-size: 30px;
 }
 
 .container {
@@ -26,23 +30,23 @@ body {
 
 #buttons {
     display: grid;
-    grid-template-columns: 300px;
+    grid-template-columns: 280px;
     grid-template-rows: auto;
     align-items: center;
     justify-content: space-around;
     height: 100%;
     grid-gap: 20px;
-    margin-top: 100px;
+    margin-top: 50px;
 }
 .btn {
     padding: 10px;
     font-size: 30px;
-    background-color: blueviolet;
+    background-color: rgb(130, 44, 210);
     color: #fff5f5;
     border: none;
     border-radius: 10px;
     margin-bottom: 30px;
-    transition: all 1.5s;
+    transition: all 0.5s;
     cursor: pointer;
     
 }
@@ -56,7 +60,15 @@ p{
 /* Tablet */
 @media (min-width: 768px) {
     #buttons {
-        grid-template-columns: 200px 200px 200px;
+        grid-template-columns: 240px 240px 240px;
         grid-template-rows: auto;
+    }
+    body {
+        font-size: 36px;
+        line-height: 1.7;
+    }
+    h1, h2 {
+        margin: 20px 0;
+        font-size: 48px;
     }
 }
